# GenerativeArtWithMath-nannou

./: .gitignore  01_02_DivRect.rs  01_02_div_rect.rs  01_04_div_square.rs  01_05_rect_div_rect.rs  01_08_recursive_div_rect.rs  04_recur_square.rs  09_quad_bezier.rs  Cargo.toml  LICENSE  README.md
03_04_fib_square/: 03_04_fib_square.rs  fib.rs
