[package]
name = "GenerativeArtWithMath-nannou"
version = "0.1.0"
authors = ["Hiroaki Yutani <yutani.ini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.14.0"
rand = "0.7.3"

[[example]]
name = "01_02_DivRect"
path = "01_02_DivRect.rs"
