[package]
name = "GenerativeArtWithMath-nannou"
version = "0.1.0"
authors = ["Hiroaki Yutani <yutani.ini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.14.0"
rand = "0.7.3"

[[example]]
name = "test"
path = "test.rs"

[[example]]
name = "01_02_div_rect"
path = "01_02_div_rect.rs"

[[example]]
name = "01_04_div_square"
path = "01_04_div_square.rs"

[[example]]
name = "01_05_rect_div_rect"
path = "01_05_rect_div_rect.rs"

[[example]]
name = "01_08_recursive_div_rect"
path = "01_08_recursive_div_rect.rs"

[[example]]
name = "03_04_fib_square"
path = "03_04_fib_square/03_04_fib_square.rs"

[[example]]
name = "04_recur_square"
path = "04_recur_square.rs"

[[example]]
name = "09_quad_bezier"
path = "09_quad_bezier.rs"